add missing brick collections
