# routes/api.php
@@ -47,7 +47,11 @@ Route::middleware(['cors', 'json.response'])->group(function () {
         });
 
         Route::get('galleries', [GalleryController::class, 'index'])->name('gallery.index');
+        Route::get('galleries/to-brick-collections-format', [GalleryController::class, 'toBrickCollections'])->name('gallery.toBrickCollections');
+        Route::get('galleries/sync', [GalleryController::class, 'sync'])->name('gallery.sync');
         Route::get('images', [ImageController::class, 'index'])->name('image.index');
+        Route::get('images/to-brick-items-format', [ImageController::class, 'toBrickItems'])->name('image.toBrickItems');
+        Route::get('images/sync', [ImageController::class, 'sync'])->name('image.sync');
 
     });
 });
