# storage/api-docs/api-docs.json
@@ -121,6 +121,42 @@
                 }
             }
         },
+        "/api/v1/galleries/to-brick-collections-format": {
+            "get": {
+                "tags": [
+                    "Gallery"
+                ],
+                "operationId": "4ed4f024f5b0f0eb9a3a8122312dbf0f",
+                "responses": {
+                    "200": {
+                        "description": "Get all galleries and show to_brick collections format",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/galleries/sync": {
+            "get": {
+                "tags": [
+                    "Gallery"
+                ],
+                "operationId": "39f8843d235319bd1261129c23f93c50",
+                "responses": {
+                    "200": {
+                        "description": "Sync all galleries with brick_by_brick collections",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/images/": {
             "get": {
                 "tags": [
@@ -232,6 +268,51 @@
                 "responses": {
                     "200": {
                         "description": "Get all images",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/images/to-brick-items-format": {
+            "get": {
+                "tags": [
+                    "Image"
+                ],
+                "operationId": "2be9f4f649b4da5a185872aca9772925",
+                "parameters": [
+                    {
+                        "name": "gallery_id",
+                        "in": "query",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Get all images and show to_brick items format",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/images/sync": {
+            "get": {
+                "tags": [
+                    "Image"
+                ],
+                "operationId": "4d104e1ace696d0b09fc2b0ddb5e22ff",
+                "responses": {
+                    "200": {
+                        "description": "Sync all images to brick_by_brick items",
                         "content": {
                             "application/json": {
                                 "schema": {}
